--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <img src="Images/TITLE2.png" alt="Darkest Rebellion"
            style="max-width: 100%; height: 220px; object-fit: contain; margin-bottom: 0;">
       <p>Click the button below to download the Windows installer.</p>
-      <a id="downloadLink" class="download-btn" href="Darkest Rebellion.exe" download>
+      <a id="downloadLink" class="download-btn" href="https://www.dropbox.com/scl/fi/4oz4c57uluogk2eyt0pey/Darkest-Rebellion.exe?rlkey=zds0m2f8xb291cx65xnflz4a4&st=ay2piwjp&dl=1" download>
         Download Game (Windows .exe)
       </a>
       <div class="muted" id="filesize">File size: —</div>
@@ -148,3 +148,4 @@
   </script>
 </body>
 </html>
+
