--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -30,9 +30,14 @@
       <img src="Images/TITLE2.png" alt="Darkest Rebellion"
            style="max-width: 100%; height: 220px; object-fit: contain; margin-bottom: 0;">
       <p>Click the button below to download the Windows installer.</p>
-      <a id="downloadLink" class="download-btn" href="https://www.dropbox.com/scl/fi/4oz4c57uluogk2eyt0pey/Darkest-Rebellion.exe?rlkey=zds0m2f8xb291cx65xnflz4a4&st=ay2piwjp&dl=1" download>
+
+      <!-- ✅ Use direct Dropbox link or your local file -->
+      <a id="downloadLink" class="download-btn" 
+         href="https://dl.dropboxusercontent.com/scl/fi/4oz4c57uluogk2eyt0pey/Darkest-Rebellion.exe?rlkey=zds0m2f8xb291cx65xnflz4a4&st=ay2piwjp"
+         download>
         Download Game (Windows .exe)
       </a>
+
       <div class="muted" id="filesize">File size: —</div>
     </main>
   </div>
@@ -64,7 +69,7 @@
           <div class="social-header">Social Media</div>
           <div class="social-icons small-icons">
             <a href="https://www.facebook.com/roger.delacruz.quilang" target="_blank"><img src="Images/facebook.png" alt="Facebook"></a>
-             <a href="https://www.instagram.com/dippzziee/"><img src="Images/instagram.png" alt="Instagram"></a>
+            <a href="https://www.instagram.com/dippzziee/" target="_blank"><img src="Images/instagram.png" alt="Instagram"></a>
           </div>
         </div>
 
@@ -75,8 +80,8 @@
           <div class="social-header">Social Media</div>
           <div class="social-icons small-icons">
             <a href="https://www.facebook.com/share/1CSMhorty4/" target="_blank"><img src="Images/facebook.png" alt="Facebook"></a>
-            <a href="https://www.tiktok.com/@arie_1221?_t=ZS-90N6B2JLHRo&_r=1"><img src="Images/tiktok.png" alt="TikTok"></a>
-            <a href="https://www.instagram.com/arian_111202?igsh=YzJtaDA5bWlyemZl"><img src="Images/instagram.png" alt="Instagram"></a>
+            <a href="https://www.tiktok.com/@arie_1221?_t=ZS-90N6B2JLHRo&_r=1" target="_blank"><img src="Images/tiktok.png" alt="TikTok"></a>
+            <a href="https://www.instagram.com/arian_111202?igsh=YzJtaDA5bWlyemZl" target="_blank"><img src="Images/instagram.png" alt="Instagram"></a>
           </div>
         </div>
 
@@ -87,8 +92,8 @@
           <div class="social-header">Social Media</div>
           <div class="social-icons small-icons">
             <a href="https://www.facebook.com/share/1CpLamBZ4E/" target="_blank"><img src="Images/facebook.png" alt="Facebook"></a>
-            <a href="https://l.facebook.com/l.php?u=http%3A%2F%2Ftiktok.com%2F%40cloudplaysz&h=AT08QEJ433-yJXztxHFQ27itsFUbTpYAo-YhL1GKxzQPPuq6vgdy8_Ajab9-OG_69Pu6xSsq0vilM7pofP9FdZKZ4BGzY82Mq_eFhdATydB2mCbSeYQsu3Zbp67TU0k&s=1"><img src="Images/tiktok.png" alt="TikTok"></a>
-            <a href="#"><img src="Images/instagram.png" alt="Instagram"></a>
+            <a href="https://tiktok.com/@cloudplaysz" target="_blank"><img src="Images/tiktok.png" alt="TikTok"></a>
+            <a href="#" target="_blank"><img src="Images/instagram.png" alt="Instagram"></a>
           </div>
         </div>
       </div>
@@ -110,42 +115,6 @@
     </div>
   </div>
 
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    // 🔹 Open modal
-    function openModal(id) {
-      closeAllModals();
-      document.getElementById(id).style.display = "flex";
-      document.getElementById('homeSection').style.display = "none";
-    }
-
-    // 🔹 Go Home (close modals)
-    function goHome() {
-      closeAllModals();
-      document.getElementById('homeSection').style.display = "flex";
-    }
-
-    // 🔹 Close all modals
-    function closeAllModals() {
-      document.querySelectorAll('.modal').forEach(m => m.style.display = "none");
-    }
-
-    // 🔹 Auto detect file size
-    (async function(){
-      const link = document.getElementById('downloadLink').href;
-      try {
-        const resp = await fetch(link, { method:'HEAD' });
-        const size = resp.headers.get('content-length');
-        if (size) {
-          const mb = (parseInt(size, 10) / (1024*1024)).toFixed(2);
-          document.getElementById('filesize').textContent = `File size: ${mb} MB`;
-        }
-      } catch {
-        document.getElementById('filesize').textContent = "File size: (unavailable)";
-      }
-    })();
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
-
