--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
            style="max-width: 100%; height: 220px; object-fit: contain; margin-bottom: 0;">
       <p>Click the button below to download the Windows installer.</p>
 
-      <!-- ✅ Use direct Dropbox link or your local file -->
       <a id="downloadLink" class="download-btn" 
          href="https://dl.dropboxusercontent.com/scl/fi/4oz4c57uluogk2eyt0pey/Darkest-Rebellion.exe?rlkey=zds0m2f8xb291cx65xnflz4a4&st=ay2piwjp"
          download>
         Download Game (Windows .exe)
       </a>
 
-      <div class="muted" id="filesize">File size: —</div>
+      <div class="muted" id="filesize">File size: 80.3 MB</div>
     </main>
   </div>
 
@@ -114,6 +113,15 @@
       </p>
     </div>
   </div>
+
+  <!-- 🔹 Background Music -->
+  <audio id="bgMusic" autoplay loop>
+    <source src="Audio/BGMusic.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
+  <!-- 🔹 Music Control Button -->
+  <button id="musicToggle" class="music-btn" title="Toggle Music">🔊</button>
 
   <script src="script.js"></script>
 </body>
