--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     </main>
   </div>
 
+  <!-- 🔹 Falling Objects (Coins + Hats) -->
+  <div id="fallingContainer"></div>
+
   <!-- 🔹 Footer -->
   <footer>
     <div class="footer-content">
