--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p>Click the button below to download the Windows installer.</p>
 
       <a id="downloadLink" class="download-btn" 
-         href="https://dl.dropboxusercontent.com/scl/fi/4oz4c57uluogk2eyt0pey/Darkest-Rebellion.exe?rlkey=zds0m2f8xb291cx65xnflz4a4&st=ay2piwjp"
+         href="https://www.dropbox.com/scl/fi/hid1xebxtnxkltypz0iyf/IMG_0938.MOV?rlkey=sdpvtmjl4k2gmb2pq25cjhe7s&st=3mlbjfqi&dl=1"
          download>
         Download Game (Windows .exe)
       </a>
@@ -129,3 +129,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
