--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       <p>Click the button below to download the Windows installer.</p>
 
       <a id="downloadLink" class="download-btn" 
-         href="https://www.dropbox.com/scl/fi/hid1xebxtnxkltypz0iyf/IMG_0938.MOV?rlkey=sdpvtmjl4k2gmb2pq25cjhe7s&st=3mlbjfqi&dl=1"
+         href="https://www.dropbox.com/scl/fi/sdd4svbiqshlmwhhdgnsw/Darkest-Rebellion.zip?rlkey=dbkjgkmhsfjl0eoxrdubpmdw6&st=og50fn9p&dl=1"
          download>
         Download Game (Windows .exe)
       </a>
 
-      <div class="muted" id="filesize">File size: 80.3 MB</div>
+      <div class="muted" id="filesize">File size: 150.6 MB</div>
     </main>
   </div>
 
@@ -129,4 +129,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
