--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p>Click the button below to download the Windows installer.</p>
 
       <a id="downloadLink" class="download-btn" 
-         href="https://www.dropbox.com/scl/fi/sdd4svbiqshlmwhhdgnsw/Darkest-Rebellion.zip?rlkey=dbkjgkmhsfjl0eoxrdubpmdw6&st=og50fn9p&dl=1"
+         href="https://www.dropbox.com/scl/fi/j63rakycgnk0ohi8jizlo/DarkestRebellionSetUp.exe?rlkey=ed7ra841xqmqw2myrreo8k7ts&st=zpaloa31&dl=1"
          download>
         Download Game (Windows .exe)
       </a>
@@ -129,5 +129,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
