--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <h2>About the Game</h2>
       <p class="about-text">
         Darkest Rebellion is an action-packed RPG adventure that tests your courage and skill.
-        Explore haunted villages, fight monstrous enemies, and uncover the rebellion within the shadows.
+        Explore historical Places, battle foriegn enemies, and uncover the rebellion within the shadows.
       </p>
       <p class="about-text">
         Created by the RAJA Entertainment team — this game is our passion project, blending art, design,
@@ -129,6 +129,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
